python/testData/quickFixes/PyMarkDirectoryAsSourceRootQuickFixTest/mysrc/foo/abc_folder_no_init.py
import <error descr="No module named 'qwerty'">qwerty</error>